--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   </head>
   <body>
     <p id="date"></p>
-
     <h3>Level</h3>
     <input type="radio" name="level" id="e" value="3" checked><label for="e">Easy</label>
     <input type="radio" name="level" id="m" value="10"><label for="m">Medium</label>
@@ -15,7 +14,7 @@
     <button id="playBtn">Play</button>
 
     <h3 id="msg">Select a Level</h3>
-    <input type="text" id="guess">
+    <input type="text" id="guess" disabled>
     <button id="guessBtn" disabled>Guess</button>
     <button id="giveUp" disabled>Give Up</button>
 
